<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item android:title="@string/menu_advisers">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_credits"
                        android:icon="@drawable/ic_menu_credits"
                        android:title="@string/menu_credits" />
                    <item
                        android:id="@+id/nav_clients"
                        android:icon="@drawable/ic_menu_clients"
                        android:title="@string/menu_clients" />
                    <item
                        android:id="@+id/nav_payments"
                        android:icon="@drawable/ic_menu_payments"
                        android:title="@string/menu_payments" />
                </group>
            </menu>
        </item>
        <item android:title="@string/menu_administrators">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_advisers"
                        android:icon="@drawable/ic_menu_advisers"
                        android:title="@string/menu_advisers" />
                    <item
                        android:id="@+id/nav_boxes"
                        android:icon="@drawable/ic_menu_boxes"
                        android:title="@string/menu_boxes" />
                    <item
                        android:id="@+id/nav_income"
                        android:icon="@drawable/ic_menu_income"
                        android:title="@string/menu_income" />
                    <item
                        android:id="@+id/nav_expenses"
                        android:icon="@drawable/ic_menu_expenses"
                        android:title="@string/menu_expenses" />
                    <item
                        android:id="@+id/nav_reports"
                        android:icon="@drawable/ic_menu_reports"
                        android:title="@string/menu_reports" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />

    </group>




</menu>